--- a/src/NLog.SignalR.Sample.Web/Views/Home/Index.cshtml
+++ b/src/NLog.SignalR.Sample.Web/Views/Home/Index.cshtml
@@ -3,46 +3,74 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<div class="container">
+<div class="container">>
     <h1>NLog.SignalR - Demo</h1>
-
-    <button class="btn btn-primary" id="createLogEntryButton">Create Log Entry</button>
-    <hr />
-    <div id="logs">
-        <table id="logTable" class="table">
-            <thead>
-                <tr>
-                    <th>Time</th>
-                    <th>Level</th>
-                    <th>Message</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+    
+    <div>
+        <button class="btn btn-primary" id="createLogEntryButton">Create Log Entry</button>
+        <hr/>
     </div>
+
+    <div ng-app="myApp">
+        <div id="scope" ng-controller="MyCtrl">
+            <div class="gridStyle" ng-grid="gridOptions"></div>
+        </div>
+    </div>
+
 </div>
 
-@section scripts {
+@section header {
+    <link rel="stylesheet" type="text/css" href="http://angular-ui.github.com/ng-grid/css/ng-grid.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
+    <script type="text/javascript" src="http://angular-ui.github.com/ng-grid/lib/ng-grid.debug.js"></script>
+    <script>
+        var app = angular.module('myApp', ['ngGrid']);
+
+        app.controller('MyCtrl', function ($scope) {
+            $scope.myData = [];
+            $scope.gridOptions = { data: 'myData', 
+                columnDefs: [{ field: 'TimeStamp', displayName: 'Date', width: 225 },
+                             { field: 'Level', displayName: 'Level', width: 75 },
+                             { field: 'Message', cellClass: 'Message', minWidth: 500, maxWidth: 1000 }],
+                sortInfo: { fields: ['TimeStamp'], directions: ['desc'] }
+            };
+            
+            $scope.changeData = function (logEvent) {
+                $scope.myData.push(logEvent);
+            };
+        });
+    </script>
     
     <script src="~/Scripts/jquery.signalR-2.1.1.min.js"></script>
     <script src="~/signalr/hubs"></script>
+    
+    <style>
+        .gridStyle {
+            border: 1px solid rgb(212,212,212);
+            /*width: 800px;*/ 
+            height: 600px
+        }
+    </style>
 
     <script>
-        $(function() {
+        $(function () {
+
             $.ajaxSetup({ cache: false }); // prevent IE from caching ajax requests
 
-            $("#createLogEntryButton").click(function() {
-                $.getJSON('/Home/AddLogEntry', function() {});
+            $("#createLogEntryButton").click(function () {
+                $.getJSON('/Home/AddLogEntry', function () { });
             });
 
             var nlog = $.connection.loggingHub;
 
-            nlog.client.log = function(logEvent) {
-                $("#logTable tbody").prepend("<tr><td>" + logEvent.TimeStamp + "</td><td>" + logEvent.Level + "</td><td>" + logEvent.Message + "</td></tr>");
+            nlog.client.log = function (logEvent) {
+                var scope = angular.element($("#scope")).scope();
+                scope.changeData(logEvent);
+                scope.$apply();
+                //$("#logTable tbody").prepend("<tr><td>" + logEvent.TimeStamp + "</td><td>" + logEvent.Level + "</td><td>" + logEvent.Message + "</td></tr>");
             };
 
-            $.connection.hub.start().done(function() {
+            $.connection.hub.start().done(function () {
                 $("#createLogEntryButton").focus();
             });
         })
