--- a/src/NLog.SignalR.Sample.Web/Views/Shared/_Layout.cshtml
+++ b/src/NLog.SignalR.Sample.Web/Views/Shared/_Layout.cshtml
@@ -7,11 +7,15 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/bootstrap")
+    
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("header", required: false)
+
 </head>
     <body>
         @RenderBody()
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
+
         @RenderSection("scripts", required: false)
     </body>
 </html>
