Finally finished getting tests to pass and handling all kinds of signalr connection issues between client and server.  The component should be pretty airtight now.

--- a/src/NLog.SignalR.Sample.Web/Views/Home/Index.cshtml
+++ b/src/NLog.SignalR.Sample.Web/Views/Home/Index.cshtml
@@ -72,7 +72,8 @@
                 scope.$apply();
             };
 
-            $.connection.hub.start().done(function() {
+            nlog.logging = true;
+            $.connection.hub.start().done(function () {
                 $("#createLogEntryButton").focus();
             });
         })
